# Rec_Evaluation

./: .gitignore  README.md
everything/: clean.sh  compile.sh  get_sample_distances.sh  mergeDistanceFiles.py  mergeGFiles.py  start_S_Rec_LocalSearch.sh  start_TwitterDSampling.sh  start_congress_eval.sh  start_congress_naiveRec.sh  start_low_dimensional_sampled_wikipedia.sh  start_low_dimensional_uniform_sampled_wikipedia.sh  start_sampled_twitter_1.sh  start_sampled_twitter_2.sh  start_sampled_twitter_eval.sh  start_sampled_wikipedia.sh  start_twitter_byte_sample.sh  start_twitter_eval.sh  start_twitter_print.sh  start_twitter_sample.sh  start_uniform_sampled_wikipedia.sh  start_wikipedia_eval.sh
everything/Data/Twitter/: nearest_k.txt  sample_amounts.txt  sampled_C.txt
everything/Data/Wikipedia/: nearest_f.txt
everything/Data/lower_dimensions_Wikipedia/: nearest_f.txt
everything/Source code/LP2/: AlgoByJoachimAndKamyar.h  comments_bipartitroundingForCharikar.cpp  roundgraph.h
everything/Source code/Rec_LocalSearch/: RecLocalSearchEval  main.cpp
everything/Source code/kUFL_LocalSearch/: loadsave.h  main.cpp  (+1 more)
everything/Source_code/LP2/: AlgoByJoachimAndKamyar.cpp  CMakeLists.txt  Makefile  evaluate.cpp  evaluate.h  loadsave.h  main.cpp  output.out
everything/TwitterDSampling/: TwitterDSampling
everything/Twitter_byte_sample_print/: Twitter_byte_sample_print
everything/getDistances/: Makefile  byte_matrix.cpp  loadsave.cpp  make_byte_matrix
everything/naiveRec/: naive_RecLocalSearchEval
everything/startS_RecLocalSearch/: startS_RecLocalSearchEval
(+284 files in other folders)
